%% Generated by tools/architecture/generate_views.py; do not edit.
stateDiagram-v2
    direction LR
    state "queued" as queued
    note right of queued
        Attempt exists and is waiting for provider execution
    end note
    state "running" as running
    note right of running
        Provider owns an active execution task
    end note
    state "succeeded" as succeeded
    note right of succeeded
        Provider process ended normally; goal acceptance remains separate
    end note
    state "failed" as failed
    note right of failed
        Provider execution failed
    end note
    state "cancelled" as cancelled
    note right of cancelled
        User or runtime cancelled the attempt
    end note
    state "orphaned" as orphaned
    note right of orphaned
        Durable attempt lost its live provider owner and may be resumable
    end note
    [*] --> queued: create attempt
    queued --> running: run.status running
    queued --> cancelled: cancel before start
    queued --> orphaned: startup reconciliation lost owner
    running --> succeeded: provider result done
    running --> failed: provider result error
    running --> cancelled: cancellation
    running --> orphaned: restart or detached checkpoint
    orphaned --> queued: bounded work.resume
    failed --> queued: work.retry creates a new attempt
    cancelled --> queued: work.retry creates a new attempt
